--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
 		"paths": {
 			// "@/*": ["./src/*"] ,
 			// "@components/*": ["./src/app/components/*"] ,
-			// "@css/*": ["./src/css/*"] ,
+			"@css/*": ["./src/styles/*"] ,
 			// "@helpers/*": ["./src/Helpers/*"] ,
 			// "@svg/*": ["./public/assets/svg/*"] ,
 			// "@images/*": ["./public/assets/images/*"] ,
