--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,8 +4,8 @@
 			// "@/*": ["./src/*"] ,
 			"@css/*": ["./src/styles/*"] ,
 			"@images/*": ["./public/assets/images/*"] ,
+			"@helpers/*": ["./src/helpers/*"] ,
 			// "@components/*": ["./src/app/components/*"] ,
-			// "@helpers/*": ["./src/Helpers/*"] ,
 			// "@svg/*": ["./public/assets/svg/*"] ,
 			// "@gif/*": ["./public/assets/gif/*"] ,
 			// "@dev/*": ["./src/app/dev/*"] ,
